# etl_sample

./: .gitignore  README.md  pyproject.toml
src/: classes.py  etl.py  etl_classes.py  extract_data_from_riotorg.py  flatten_raw_data.py  graphql_query_strings.py  group_column_mapping.py  load_data.py  notion_functions.py  notion_secrets_edit.py  notion_static_attrs.py  product_column_mapping.py  rdm_classes.py  rdm_exclude.py  rdm_scraper.py  rdm_secrets_edit.py  rdm_sync.py  riot_org_scraper.py  scraper.py  transform_data.py  war_groups_secrets_edit.py
