[build-system]
requires = ["setuptools", "requests", "gql"]
build-backend = "setuptools.build_meta"

[project]
name = "rdm-api-wrapper"
version = "0.0.4"
dependencies =[
  "requests",
  "gql",
  'importlib-metadata; python_version<"3.10"'
]
authors = [
  { name="Matthew Yocum", email="matthew.yocum@riotgames.com" },
]
description = "A small wrapper for the RDM Api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gh.riotgames.com/matthew-yocum/rdm-to-notion-etl"
Issues = "https://gh.riotgames.com/matthew-yocum/rdm-to-notion-etl/issues"