[build-system]
requires = [
  'setuptools,
  'pandas',
  'riotorg_apis_wrapper @ git+https://gh.riotgames.com/matthew-yocum/riotorg-apis-wrapper',
  'notion-py @ git+https://gh.riotgames.com/matthew-yocum/notion-py'
]
build-backend = "setuptools.build_meta"

[project]
name = "riot-org-to-notion-etl"
version = "1.0.0"
dependencies =[
  "requests",
  "gql",
  'importlib-metadata; python_version<"3.10"'
]
authors = [
  { name="Matthew Yocum", email="matthew.yocum@riotgames.com" },
]
description = "A small wrapper for the RDM Api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gh.riotgames.com/matthew-yocum/rdm-to-notion-etl"
Issues = "https://gh.riotgames.com/matthew-yocum/rdm-to-notion-etl/issues"